# electric-era

./: AvailabilityEvent.cpp  AvailabilityEvent.h  CMakeLists.txt  Charger.cpp  Charger.h  Charging.h  ChargingNetwork.cpp  ChargingNetwork.h  Doxyfile  Doxyfile_internal  README.md  Station.cpp  Station.h  StationAvailabilityEntry.cpp  StationAvailabilityEntry.h  StationAvailabilityReport.cpp  StationAvailabilityReport.h  StationAvailabilityReportFactory.cpp  StationAvailabilityReportFactory.h  electra2.kdev4  main.cpp  station_test.cpp
data/: input_3.txt  input_4.txt  input_5.txt  random_binary_file
docs/docbook/: Makefile  customdocbookstylesheet.xsl  customdocbookstylesheet_for_xhtml.xsl  electricera.html  electricera.xml  intermediate.fo  specification.xml
docs/etc/: uml-diagram.dia
docs/html/: electricera.html
